# ICESat2VegR

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE.note  Makefile  NAMESPACE  README.Rmd  README.md  cleanup  cleanup.ucrt  configure.ac  configure.win  cran-comments.md  v06_DifferentSizeSegments.md
.Rd2pdf83296/: Rd2.aux  Rd2.idx  Rd2.ilg  Rd2.ind  Rd2.out  Rd2.tex  Rd2.toc
.github/workflows/: rhub.yaml
R/: .Renviron.R  ANNIndex.R  ATL03_ATL08_compute_attributes_dt_segStat.R  ATL03_ATL08_compute_seg_attributes_dt_segStat.R  ATL03_ATL08_join_dt.R  ATL03_ATL08_joined_dt_LAS.R  ATL03_ATL08_joined_dt_clipBox.R  ATL03_ATL08_joined_dt_clipGeometry.R  ATL03_ATL08_joined_dt_gridStat.R  ATL03_ATL08_joined_dt_polyStat.R  ATL03_ATL08_photons_attributes_dt_LAS.R  ATL03_ATL08_photons_attributes_dt_clipBox.R  ATL03_ATL08_photons_attributes_dt_clipGeometry.R  ATL03_ATL08_photons_attributes_dt_gridStat.R  ATL03_ATL08_photons_attributes_dt_join.R  ATL03_ATL08_photons_attributes_dt_polyStat.R  ATL03_ATL08_photons_seg_dt_fitground.R  ATL03_ATL08_photons_seg_dt_height_normalize.R  ATL03_ATL08_seg_attributes_dt_clip.R  ATL03_ATL08_seg_cover_dt_compute.R  ATL03_ATL08_segment_create.R  ATL03_ATL08join.R  ATL03_attributes_dt_LAS.R  ATL03_h5_clip.R  ATL03_h5_clipBox.R  ATL03_h5_clipGeometry.R  ATL03_photons_attributes_dt.R  ATL03_photons_attributes_dt_LAS.R  ATL03_photons_attributes_dt_clipBox.R  ATL03_photons_attributes_dt_clipGeometry.R  ATL03_photons_plot.R  ATL03_photons_simulator.R  ATL03_read.R  ATL03_rgt_extract.R  ATL03_seg_attributes_dt.R  ATL03_seg_metadata_dt.R  ATL03read.R  ATL08_attributes_dt_LAS.R  ATL08_canopy.R  ATL08_canopy_attributes_dt.R  (+111 more)
R/old/: ATL03ATL08joined_dt_clipGeometry.R  ATL03_classify.R  ATL08_canopy.R  ATL08_canopy_polyStat.R  ATL08_metrics.R  ATL08_terrain.R  ATL08_terrain_dt_polyStat.R  getATL08.R  readATL03.R  readATL08.R  test2.R  tests.R
dev/: 01_2026_forestsat_ic2_handling_data.R  02_2026_forestsat_ic2_modelling_h5_to_raster.R  02_beams.py  02_rgt.py  03_2026_forestsat_ic2_upscalling_using_gee.R  2026_forestsat_workshop_ch.R  ICESat2VegR_framework_v4.R  fix_cc++.R  my_model.rds  original_hdf5_clips_in_example.R  test_all.r
inst/: REFERENCES.bib
inst/doc/: v01_Installation.html  v02_FindingDownloading.html  v03.1_ClipData.html  v03_WorkingWithSegments.html  v04.1differentSizeSegments.html  v04_JoiningPhotons.html  v05_GeeModelling.html  v06_PredictH5.html
inst/exdata/: polygon.dbf  polygon.shp  polygon.shx
inst/extdata/: ATL03_ATL08_example_segments.geojson  IS2_RGT_0001_cycle33_12-Sep-2026.kml  IS2_RGT_0002_cycle33_12-Sep-2026.kml  IS2_RGT_0003_cycle33_13-Sep-2026.kml  IS2_RGT_0004_cycle33_13-Sep-2026.kml  IS2_RGT_0005_cycle33_13-Sep-2026.kml  IS2_RGT_0006_cycle33_13-Sep-2026.kml  IS2_RGT_0007_cycle33_13-Sep-2026.kml  IS2_RGT_0008_cycle33_13-Sep-2026.kml  IS2_RGT_0009_cycle33_13-Sep-2026.kml  IS2_RGT_0010_cycle33_13-Sep-2026.kml  aoi_4326.geojson  atl03_clip.h5  atl08_clip.h5  clip_geom.dbf  clip_geom.shp  clip_geom.shx  example.tif
inst/scripts/: upscaling_alphaearth_workflow.R
man/: ANNIndex.Rd  ATL03_ATL08_compute_seg_attributes_dt_segStat.Rd  ATL03_ATL08_join_dt.Rd  ATL03_ATL08_joined_dt_LAS.Rd  ATL03_ATL08_joined_dt_clipBox.Rd  ATL03_ATL08_joined_dt_clipGeometry.Rd  ATL03_ATL08_joined_dt_gridStat.Rd  ATL03_ATL08_joined_dt_polyStat.Rd  ATL03_ATL08_photons_attributes_dt_LAS.Rd  ATL03_ATL08_photons_attributes_dt_clipBox.Rd  ATL03_ATL08_photons_attributes_dt_clipGeometry.Rd  ATL03_ATL08_photons_attributes_dt_gridStat.Rd  ATL03_ATL08_photons_attributes_dt_join.Rd  ATL03_ATL08_photons_attributes_dt_polyStat.Rd  ATL03_ATL08_photons_dt_height_normalize.Rd  ATL03_ATL08_photons_seg_dt_fitground.Rd  ATL03_ATL08_photons_seg_dt_height_normalize.Rd  ATL03_ATL08_seg_attributes_dt_clipBox.Rd  ATL03_ATL08_seg_attributes_dt_clipGeometry.Rd  ATL03_ATL08_seg_cover_dt_compute.Rd  ATL03_ATL08_segment_create.Rd  ATL03_attributes_dt_LAS.Rd  ATL03_h5_clip.Rd  ATL03_h5_clipBox.Rd  ATL03_h5_clipGeometry.Rd  ATL03_photons_attributes_dt.Rd  ATL03_photons_attributes_dt_LAS.Rd  ATL03_photons_attributes_dt_clipBox.Rd  ATL03_photons_attributes_dt_clipGeometry.Rd  ATL03_photons_plot.Rd  ATL03_read-ANY-method.Rd  ATL03_read-character-method.Rd  ATL03_read-icesat2.granule_cloud-method.Rd  ATL03_read.Rd  ATL03_rgt_extract.Rd  ATL03_seg_attributes_dt.Rd  ATL03_seg_attributes_dt_LAS.Rd  ATL03_seg_metadata_dt.Rd  ATL03read.Rd  ATL08_attributes_dt_LAS.Rd  (+239 more)
readme/removed_terrain/: ATL08_terrain_attributes_dt.R  ATL08_terrain_dt_clipBox.R  ATL08_terrain_dt_clipGeometry.R  ATL08_terrain_dt_gridStat.R  ATL08_terrain_dt_polyStat.R  ATL08_terrain_dt_segStat.R  ATL08_terrain_h5_gridStat.R
readme/testing/: 00_get_segments_100m.R  00_get_segments_30m.R  01var_select.R  02gee_modelling.R  PAI_PAVd_calculations.R  Untitled.ipynb  full_modelling.R  full_testing.ipynb  gee-full_test.r  gee-rapidfem4d.R  gee-test.R  geomSampling.R  getExampleData.r  load_atl08_data.R  output.gpkg  output2.gpkg  plot_animation.R  quick.R  rasterSampling.R  readme_test_all.r  samplingTest.R  simple_modelling.R  temp_test.R  test-rcpp.R  test.R  test.rds  test2.R  test_LAS.R  test_all_final.R  test_cloud.R  testing_igarss.r
src/: ANN.cpp  ANNIndex.cpp  ANNIndex.h  GridIndex.cpp  GridIndex.h  IndexInterface.cpp  IndexInterface.h  Makevars  Makevars.ucrt  Makevars.ucrt.in  RcppExports.cpp  argParse.c  argParse.h  findRadius.cpp  gdal.hpp  gdal_bindings.h  kd_dump.cpp  offsetIndex.cpp  perf.cpp  random_forest_to_strings.cpp  random_forest_to_strings.h  rasterizeHDF.cpp  sampling.cpp  seq_lens_simplify.cpp  seq_lens_simplify.h
tests/: TEST_CASES.md  testthat.R
tests/testthat/: test-ICESat2.h5.R  test-ICESat2.h5_cloud.R  (+15 more)
vignettes/: v01_Installation.Rmd  v02_FindingDownloading.Rmd  v03.1_ClipData.Rmd  v03_WorkingWithSegments.Rmd  v04.1differentSizeSegments.Rmd  v04_ClipData.Rmd  v04_JoiningPhotons.Rmd  v05_GeeModelling.Rmd  v05_JoiningPhotons.Rmd  v05_PredictH5.Rmd  v06_DifferentSizeSegments.Rmd  v06_GeeModelling.Rmd  v06_PredictH5.Rmd  v07_PredictH5.Rmd  v08_GeeModelling.Rmd  v08_GeeModelling.Rmd.orig
(+13 files in other folders)
